# otus-cpp-prof

./: .gitignore  README.md  test.h
.github/workflows/: 01.CICD_release_ubuntu.yaml  02.IP_filter_release_ubuntu.yaml  04.IP_printer_release_ubuntu.yaml  05.architecture_release_ubuntu.yaml  07.bulk_release_ubuntu.yaml  08.bayan_release_ubuntu.yaml  09.async_release_ubuntu.yaml  10.asio_release_ubuntu.yaml  11.join_release_ubuntu.yaml  13.cv_release_ubuntu.yaml
01.CICD/: CMakeLists.txt  README.md  main.cpp  test.h
01.CICD/.github/workflows/: 01.CICD_release_ubuntu.yaml
01.CICD/github/workflows/: release_debian.yaml  release_ubuntu.yaml
01.CICD/include/: lib.h  version.h.in
01.CICD/source/: lib.cpp
01.CICD/test/: test_version.cpp
02.IP_filter/: CMakeLists.txt  README.md
02.IP_filter/include/: ip_filter.h  ip_filter.hpp
02.IP_filter/src/: ip_filter.cpp
02.IP_filter/test/: test.cpp
03.allocator/: CMakeLists.txt  allocator.cpp  allocator.h
04.IP_printer/: CMakeLists.txt  README.md  ip_printer.cpp
05.architecture/: CMakeLists.txt  README.md  main.cpp
05.architecture/include/: document_manager.h  document_manager.hpp  gui.h  gui.hpp  image_manager.h  image_manager.hpp  model.h
06.matrix/: CMakeLists.txt  README.md  main.cpp  main2.cpp  test.cpp
06.matrix/include/: internal_data.h  matrix.h
07.bulk/: CMakeLists.txt  main.cpp
07.bulk/include/: abstract_logger.h  bulk.h  logger.h  loggers.h  utils.h
08.bayan/: CMakeLists.txt  README.md  main.cpp  test.cpp
08.bayan/include/: argparse.h  comparator.h  comparator.hpp  compare.h  hasher.h  paths.h  paths.hpp  read_block.h  read_block.hpp  utils.h  utils.hpp
08.bayan/test3/: test.txt  test2.txt
09.async/: CMakeLists.txt  README.md  main.cpp
09.async/asynclib/: async.cpp
09.async/include/: abstract_logger.h  async.h  bulk.h  ilogger.h  lockfree_queue.h  loggers.h  multithread_queue.h  server.h  thread_manager.h  utils.h
09.async/src/: client.cpp  server.cpp
10.asio/: CMakeLists.txt  README.md  note.txt
10.asio/asynclib/: async.cpp
10.asio/include/: abstract_logger.h  async.h  bulk.h  lockfree_queue.h  server.h  thread_manager.h  utils.h
10.asio/src/: client.cpp  server.cpp
11.join_server/: README.md
11.join_server/include/: database.h  database.hpp  server.h  server.hpp  table.hpp  utils.h
11.join_server/src/: client.cpp  database.cpp  server.cpp
11.rdbms/: CMakeLists.txt  README.md
11.rdbms/include/: server.h  table.h  utils.h
11.rdbms/src/: database.cpp
12.mapreduce/: CMakeLists.txt  data.txt  dummy_data.txt  mail_generator.py  main.cpp  seekg.cpp
12.mapreduce/example/: CMakeLists.txt  MapReduce.cpp
12.mapreduce/example/homework/: client.cpp
13.CV/: CMakeLists.txt  README.md  note.md
13.CV/include/: classifier.h  tf_classifier.hpp  utils.hpp
13.CV/src/: main.cpp  tf_classifier.cpp
13.CV/tests/: test_tf.cpp
excercises/: CMakeLists.txt  atomic.cpp  atomic2.cpp  binsearch.cpp  call_once.cpp  coroutines.cpp  coroutines_simplest.cpp  ex.cpp  filesystem.cpp  inh.cpp  list_init.cpp  lowercase.cpp  max_set.cpp  partition.cpp  qsort.cpp  ranges.cpp  set_bit.cpp  str_replace.cpp  string_preproc.cpp  struct_binding.cpp  templates.cpp  test.cpp  thread_test.cpp  thread_test2.cpp  thread_test3.cpp  thread_test4.cpp  tie.cpp  tuple.cpp  unnamed_namespace.cpp  void_allocator.cpp
excercises/asio/: CMakeLists.txt  client.cpp  client.py  post-dispatch.cpp  server.cpp  str.cpp  timer.cpp
excercises/asio/include/: dummy.h  server.h
excercises/logger_thread/: CMakeLists.txt  logger backup.cpp  logger.cpp
excercises/ml/: main.cpp
excercises/sqlite/: CMakeLists.txt  db  main.cpp
excercises/test/: test.cpp
excercises/timus/: chess_horse.cpp  eagles.cpp  godbad.cpp  goodbad2.cpp  titans.cpp  trava.cpp  trivial.cpp  xz.cpp  xz2.cpp
github/workflows/: 01.CICD_release_ubuntu.yaml
test/: helloworld.h
